#166272357 Implement Comment Like Functionality (#41)
* feat-[166272357]: Implement Comment Like Functionality

- Write tests
- Define api endpoints, methods and controllers
- Document routes
- Refactor comment helper function
- write test for logout route

[Delivers #166272357]
