# server/routes/api/articles.js
@@ -4,7 +4,7 @@ import Token from '@helpers/Token';
 import trim from '@middlewares/trim';
 import CommentController from '@controllers/comments';
 import articleFinder from '@middlewares/articleFinder';
-import commentFinder from '@middlewares/commentFinder';
+import { find, commentFinder } from '@middlewares/commentFinder';
 
 const articlesRouter = express.Router();
 
@@ -12,6 +12,9 @@ articlesRouter.post('/:slug/comments', Token.authorize, trim, articleFinder, Com
 articlesRouter.get('/:slug/comments', Token.authorize, articleFinder, CommentController.getComments);
 articlesRouter.put('/:slug/comments/:id', Token.authorize, trim, commentFinder, CommentController.updateComment);
 articlesRouter.delete('/:slug/comments/:id', Token.authorize, commentFinder, CommentController.deleteComment);
+
+articlesRouter.post('/:slug/comments/:id/like', Token.authorize, find, CommentController.likeComment);
+articlesRouter.delete('/:slug/comments/:id/like', Token.authorize, find, CommentController.unlikeComment);
 
 articlesRouter.get('/', ArticleController.getAll);
 articlesRouter.get('/:slug', ArticleController.getOne);
